# ChangeLog for media-gfx/imagemagick
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.284 2008/05/25 12:38:52 maekke Exp $

*imagemagick-6.4.1.3 (25 May 2008)

  25 May 2008; Markus Meier <maekke@gentoo.org> +imagemagick-6.4.1.3.ebuild:
  bump to 6.4.1.3, requested in bug #221119

  18 Apr 2008; Markus Meier <maekke@gentoo.org> -imagemagick-6.3.9.7.ebuild:
  remove this version, as MagickWand is broken (fixed in upstream version
  6.3.8-9), reported in bug #217655

*imagemagick-6.4.0.6 (13 Apr 2008)

  13 Apr 2008; Caleb Tennis <caleb@gentoo.org> +imagemagick-6.4.0.6.ebuild:
  version bump

  11 Apr 2008; Markus Meier <maekke@gentoo.org> -imagemagick-6.3.0.5.ebuild,
  -imagemagick-6.3.0.5-r1.ebuild, -imagemagick-6.3.4-r1.ebuild,
  -imagemagick-6.3.5.9.ebuild, -imagemagick-6.3.7.9.ebuild,
  -imagemagick-6.3.7.9-r1.ebuild, -imagemagick-6.3.8.3.ebuild:
  old

  11 Apr 2008; Markus Meier <maekke@gentoo.org>
  imagemagick-6.3.8.3-r1.ebuild:
  amd64 stable, bug #216578

  07 Apr 2008; Jeroen Roovers <jer@gentoo.org>
  imagemagick-6.3.8.3-r1.ebuild:
  Stable for HPPA (bug #216578).

  07 Apr 2008; Brent Baude <ranger@gentoo.org>
  imagemagick-6.3.8.3-r1.ebuild:
  stable ppc, bug 216578

  07 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  imagemagick-6.3.8.3-r1.ebuild:
  alpha/ia64/sparc stable wrt #216578

  07 Apr 2008; Brent Baude <ranger@gentoo.org>
  imagemagick-6.3.8.3-r1.ebuild:
  stable ppc64, bug 216578

  06 Apr 2008; Dawid Węgliński <cla@gentoo.org>
  imagemagick-6.3.8.3-r1.ebuild:
  Stable on x86 (bug #216578)

*imagemagick-6.3.9.7 (17 Mar 2008)

  17 Mar 2008; Markus Meier <maekke@gentoo.org> +imagemagick-6.3.9.7.ebuild,
  -imagemagick-6.3.9.8.ebuild:
  downgrade bump to imagemagick-6.3.9.7 as upstream changed the 6.3.9.8
  tarball (bug #213673). I'll remove the 6.3.9.8 version for now.

  16 Mar 2008; <ricmm@gentoo.org> imagemagick-6.3.0.5.ebuild,